logs/offboard_pkg/build.make.233.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:185:41: error: no matching function for call to ‘MultiBody::Init_lla_circle(double&, Eigen::Vector3d&)’
  185 |         Init_lla_circle(yaw_d, lla_lead0);
      |                                         ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:25:10: note: candidate: ‘void MultiBody::Init_lla_circle(double)’
   25 |     void Init_lla_circle(double yaw_d);
      |          ^~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:25:10: note:   candidate expects 1 argument, 2 provided
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:212:6: error: no declaration matches ‘void MultiBody::Init_lla_circle(double, Eigen::Vector3d&)’
  212 | void MultiBody::Init_lla_circle(double yaw_d, Eigen::Vector3d &lla_lead0)
      |      ^~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:25:10: note: candidate is: ‘void MultiBody::Init_lla_circle(double)’
   25 |     void Init_lla_circle(double yaw_d);
      |          ^~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:5:7: note: ‘class MultiBody’ defined here
    5 | class MultiBody
      |       ^~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: error: no declaration matches ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
  195 | bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d &pos)
      |      ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: note: no functions named ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
